--- a/posts/2022-07-14-vulpea-0.3.org
+++ b/posts/2022-07-14-vulpea-0.3.org
@@ -40,7 +40,7 @@ Under the hood, Org Roam uses SQLite with 7 different tables. Each table stores 
 
 I won't go too much into detail explaining [[https://github.com/d12frosted/vulpea/commit/e2e82fb1288e68f4b84fcd003226fd053677e6c2#diff-45d792d2854eb88fa849977354fe467f09e47c0ca44a51ff5c5b2e1276725a40][how it worked previously in Vulpea]] and [[https://github.com/org-roam/org-roam/blob/c3867619147175faf89ed8f3e90a1e67a4fd9655/org-roam-node.el#L337-L405][how it still works in Org Roam]]. That deserves a separate post that can be based on my conversation with Jörg Volbers. In short, it uses a trick to multiply all needed tables into one big table. Definitely not my proudest contribution. But most importantly, it is [[https://github.com/org-roam/org-roam/commit/a199886ef7ae208b0b10dc45e0df9b54d210cd4d#r52949692][error-prone]] and slow.
 
-After [[https://github.com/d12frosted/vulpea/commit/e2e82fb1288e68f4b84fcd003226fd053677e6c2][adding links]] to the =vulpea-note=, I realised that =vulpea-db-query= became too slow for my collection of notes. And so I decided to add an extra table, where every row contains a fully materialised/populated note. And so I decided to add an extra table, where every row contains a fully materialised/populated note. And this simple idea provided a 4.5x performance boost to all functions using =vulpea-db-query=. 
+After [[https://github.com/d12frosted/vulpea/commit/e2e82fb1288e68f4b84fcd003226fd053677e6c2][adding links]] to the =vulpea-note=, I realised that =vulpea-db-query= became too slow for my collection of notes. And so I decided to add an extra table, where every row contains a fully materialised/populated note. This simple idea provided a 4.5x performance boost to all functions using =vulpea-db-query=.
 
 This is a game changer with only one downside - write performance degradation. Of course, we write the same data twice - in Org Roam tables and then in materialised view table. But there is more to writing performance degradation. It is hard to hook into Org Roam parsing and writing routine, so I had to duplicate buffer parsing. And this is the biggest performance offender. In most cases, when you simply modify a single note, this is hardly noticeable. But syncing 9k notes takes x2 time.
 
