--- a/posts/2020-06-10-org-roam-tags.org
+++ b/posts/2020-06-10-org-roam-tags.org
@@ -1,6 +1,6 @@
 [[https://github.com/org-roam/org-roam][Org-roam]] is a note-taking tool built on top of Emacs and Org. Essentially, it's a replica of [[https://roamresearch.com][Roam Research]]. These tools provide an easy way to create and manage non-hierarchical notes. If you wish to learn more, just take a look at the [[https://org-roam.github.io/org-roam/manual/][Org-roam manual]] or watch [[https://www.youtube.com/watch?v=Lg61ocfxk3c][Making Connections in your Notes]] video by Matt Williams. Believe me, Org-roam and Roam Research are game-changers. Or even better, don't believe me and validate my claim by yourself.
 
-Since I am already [[https://d12frosted.io/posts/2016-12-20-Being-an-org-mode-addict.html][addicted]], it was only natural to prefer =org-roam= over some web application. Apart from being developed on top of mature Org ecosystem, Emacs brings many merits and extensibility is one of them. Once =org-roam= introduced tags system in [[https://github.com/org-roam/org-roam/blob/master/CHANGELOG.md#111-18-05-2020][v1.1.1]] I felt the lack of functions to manage them. Adding and removing them by hand is not nice. So in this article I am sharing a snippet that I've forged to ease the unbearable lightness of being.
+Since I am already [[d12frosted:/posts/2016-12-20-Being-an-org-mode-addict][addicted]], it was only natural to prefer =org-roam= over some web application. Apart from being developed on top of mature Org ecosystem, Emacs brings many merits and extensibility is one of them. Once =org-roam= introduced tags system in [[https://github.com/org-roam/org-roam/blob/master/CHANGELOG.md#111-18-05-2020][v1.1.1]] I felt the lack of functions to manage them. Adding and removing them by hand is not nice. So in this article I am sharing a snippet that I've forged to ease the unbearable lightness of being.
 
 *Change Log:*
 
