--- a/posts/2021-01-16-task-management-with-roam-vol5.org
+++ b/posts/2021-01-16-task-management-with-roam-vol5.org
@@ -1,4 +1,4 @@
-In previous articles ([[https://d12frosted.io/posts/2020-06-23-task-management-with-roam-vol1.html][Vol 1]] and [[https://d12frosted.io/posts/2020-06-24-task-management-with-roam-vol2.html][Vol 2]]) we talked about moving tasks from regular =org-mode= files to =org-roam= notes. This relied upon adding all =org-roam= files to =org-agenda-files=, which doesn't scale well, as when you build an agenda buffer, it needs to traverse each file. Once you have more than 1k notes, things become sluggish.
+In previous articles ([[d12frosted:/posts/2020-06-23-task-management-with-roam-vol1][Vol. 1]] and [[d12frosted:/posts/2020-06-24-task-management-with-roam-vol2][Vol. 2]]) we talked about moving tasks from regular =org-mode= files to =org-roam= notes. This relied upon adding all =org-roam= files to =org-agenda-files=, which doesn't scale well, as when you build an agenda buffer, it needs to traverse each file. Once you have more than 1k notes, things become sluggish.
 
 In my experience, once I reached 1200 note files, =org-agenda= constantly took more than 50 seconds to build, rendering this tool completely useless. But then I realised that only 3% of those files actually contain any =TODO= entries, so there is no need to traverse whole =org-roam-directory=!
 
@@ -261,13 +261,13 @@ Thank you for your patience.
 :ID:                     2f8ad16f-05ef-406e-8783-55cba1050e60
 :END:
 
-1. [[https://d12frosted.io/posts/2020-06-23-task-management-with-roam-vol1.html][Path to Roam]]
-2. [[https://d12frosted.io/posts/2020-06-24-task-management-with-roam-vol2.html][Categories]]
-3. [[https://d12frosted.io/posts/2020-06-25-task-management-with-roam-vol3.html][FILETAGS]]
-4. [[https://d12frosted.io/posts/2020-07-07-task-management-with-roam-vol4.html][Automatic tagging]]
-5. [[https://d12frosted.io/posts/2021-01-16-task-management-with-roam-vol5.html][Dynamic and fast agenda]]
-6. [[https://d12frosted.io/posts/2021-01-24-task-management-with-roam-vol6.html][Select a person and view related tasks]]
-7. [[https://d12frosted.io/posts/2021-05-21-task-management-with-roam-vol7.html][Capture]]
+1. [[d12frosted:/posts/2020-06-23-task-management-with-roam-vol1][Path to Roam]]
+2. [[d12frosted:/posts/2020-06-24-task-management-with-roam-vol2][Categories]]
+3. [[d12frosted:/posts/2020-06-25-task-management-with-roam-vol3][FILETAGS]]
+4. [[d12frosted:/posts/2020-07-07-task-management-with-roam-vol4][Automatic tagging]]
+5. [[d12frosted:/posts/2021-01-16-task-management-with-roam-vol5][Dynamic and fast agenda]]
+6. [[d12frosted:/posts/2021-01-24-task-management-with-roam-vol6][Select a person and view related tasks]]
+7. [[d12frosted:/posts/2021-05-21-task-management-with-roam-vol7][Capture]]
 
 * References
 :PROPERTIES:
