--- a/posts/2021-01-24-task-management-with-roam-vol6.org
+++ b/posts/2021-01-24-task-management-with-roam-vol6.org
@@ -1,4 +1,4 @@
-In one of the previous articles ([[https://d12frosted.io/posts/2020-06-25-task-management-with-roam-vol3.html][Vol 3]] to be precise) we talked about automatic setup of =filetags=, so each of the task in note related to a person is automatically tagged thanks to [[https://orgmode.org/manual/Tag-Inheritance.html][tag inheritance]]. Then, in [[https://d12frosted.io/posts/2020-07-07-task-management-with-roam-vol4.html][Vol 4]] we talked about automatic tagging of tasks whenever a person is mentioned either in the title or the body of some task. This all makes =org-agenda= [[https://orgmode.org/manual/Matching-tags-and-properties.html#Matching-tags-and-properties][matching capabilities]] really useful for when we want to see the list of all tasks related to specific person.
+In one of the previous articles ([[d12frosted:/posts/2020-06-25-task-management-with-roam-vol3][Vol. 3]] to be precise) we talked about automatic setup of =filetags=, so each of the task in note related to a person is automatically tagged thanks to [[https://orgmode.org/manual/Tag-Inheritance.html][tag inheritance]]. Then, in [[d12frosted:/posts/2020-07-07-task-management-with-roam-vol4][Vol. 4]] we talked about automatic tagging of tasks whenever a person is mentioned either in the title or the body of some task. This all makes =org-agenda= [[https://orgmode.org/manual/Matching-tags-and-properties.html#Matching-tags-and-properties][matching capabilities]] really useful for when we want to see the list of all tasks related to specific person.
 
 In this article, we are going to write a small utility function that asks user to select a person and then presents and =org-agenda= buffer with tasks related to selected person.
 
@@ -38,7 +38,7 @@ Now some explanations.
 
 1. This code uses [[https://github.com/d12frosted/vulpea][vulpea]] library[fn:1] to select a person. You can achieve the same result without =vulpea=, of course, but it saves some effort. =vulpea-select-from= asks the use to select a note from a list of notes, returned by =vulpea-db-query-by-tags-some=. In this case, we simply present only people notes. The same result can be achieved by using =vulpea-select= that takes a predicate, but =vulpea-db-query-by-tags-some= works faster. See [[https://github.com/d12frosted/vulpea#orgb0b2734][Performance]] section of =vulpea= documentation.
 2. Once we have a selected =vulpea-note=, we can get all titles on that file (e.g. main title and aliases). This is important for alias users. For example, in some notes I want use Mr. Frodo instead of Frodo Baggins, but I want to see tasks tagged as =@Mr.Forod= and =@FrodoBaggins= at the same time. It's the same person after all (don't ask me about Gollum, better use =M-x doctor=)!
-3. Now we simply convert those names into tags using =vulpea--title-to-tag= from [[https://d12frosted.io/posts/2020-07-07-task-management-with-roam-vol4.html][Vol 4]].
+3. Now we simply convert those names into tags using =vulpea--title-to-tag= from [[d12frosted:/posts/2020-07-07-task-management-with-roam-vol4][Vol. 4]].
 4. Then we join the tags using =|= separator into single query string.
 5. The last step is to execute =org-agenda= with =M= argument (match for tags, but list only =TODO= items). In order to pass a query to relevant agenda function, we use =org-agenda-overriding-arguments=. Not sure if it's documented anywhere, but you can read the sources of =org-agenda= to figure out how to use it. =dlet= here is used for dynamic binding. If you are not using lexical scope, you can use regular =let= here.
 
@@ -51,13 +51,13 @@ That's it! Now see it in action, again.
 :ID:                     1cb9db63-7bdd-4cf4-808a-419fda15422a
 :END:
 
-1. [[https://d12frosted.io/posts/2020-06-23-task-management-with-roam-vol1.html][Path to Roam]]
-2. [[https://d12frosted.io/posts/2020-06-24-task-management-with-roam-vol2.html][Categories]]
-3. [[https://d12frosted.io/posts/2020-06-25-task-management-with-roam-vol3.html][FILETAGS]]
-4. [[https://d12frosted.io/posts/2020-07-07-task-management-with-roam-vol4.html][Automatic tagging]]
-5. [[https://d12frosted.io/posts/2021-01-16-task-management-with-roam-vol5.html][Dynamic and fast agenda]]
-6. [[https://d12frosted.io/posts/2021-01-24-task-management-with-roam-vol6.html][Select a person and view related tasks]]
-7. [[https://d12frosted.io/posts/2021-05-21-task-management-with-roam-vol7.html][Capture]]
+1. [[d12frosted:/posts/2020-06-23-task-management-with-roam-vol1][Path to Roam]]
+2. [[d12frosted:/posts/2020-06-24-task-management-with-roam-vol2][Categories]]
+3. [[d12frosted:/posts/2020-06-25-task-management-with-roam-vol3][FILETAGS]]
+4. [[d12frosted:/posts/2020-07-07-task-management-with-roam-vol4][Automatic tagging]]
+5. [[d12frosted:/posts/2021-01-16-task-management-with-roam-vol5][Dynamic and fast agenda]]
+6. [[d12frosted:/posts/2021-01-24-task-management-with-roam-vol6][Select a person and view related tasks]]
+7. [[d12frosted:/posts/2021-05-21-task-management-with-roam-vol7][Capture]]
 
 * References
 :PROPERTIES:
