--- a/posts/2021-04-09-emacs-d.org
+++ b/posts/2021-04-09-emacs-d.org
@@ -1,4 +1,4 @@
-*TL;DR* This post describes an approach to make byte compiler and various linters happy and *useful* in your =.emacs.d=, while maintaining startup performance, the ability to write embedded packages and test them. This is going to be a long post, so grab a bottle of wine, snacks and follow me. In case you lack these things, just take a look at [[https://d12frosted.io/posts/2021-04-09-emacs-d.html#solution][results]].
+*TL;DR* This post describes an approach to make byte compiler and various linters happy and *useful* in your =.emacs.d=, while maintaining startup performance, the ability to write embedded packages and test them. This is going to be a long post, so grab a bottle of wine, snacks and follow me. In case you lack these things, just take a look at results.
 
 The longest project in my life is [[https://github.com/d12frosted/environment][environment]], it started with [[https://github.com/d12frosted/environment/tree/master/emacs][Emacs configurations]] - personal frustration and my biggest time +waster+ investment. I might be masochistic, but I never felt sorry for falling into this +trap+ world. And boy, sometimes it is painful to maintain something in this ever-mutating and dynamic system.
 
@@ -304,7 +304,7 @@ The bootstrap process of [[https://github.com/raxod502/straight.el][raxod502/str
     (load bootstrap-file nil 'nomessage))
 #+end_src
 
-The only bit I am not describing here is how I configure [[https://d12frosted.io/posts/2021-04-08-straight-el-retries.html][retries for networking operations]].
+The only bit I am not describing here is how I configure [[d12frosted:/posts/2021-04-08-straight-el-retries][retries for networking operations]].
 
 ** Setup =use-package=
 :PROPERTIES:
