--- a/posts/2021-05-21-task-management-with-roam-vol7.org
+++ b/posts/2021-05-21-task-management-with-roam-vol7.org
@@ -95,7 +95,7 @@ In order to process all inbox files managed by Org Mode we have wonderful =org-a
 
 Now I can perform my routine on inbox entries by removing irrelevant entries, performing actions that can be performed now, moving tasks to relevant projects, processing meeting notes by producing more notes or tasks. Well, routine.
 
-Agenda builds fast thanks to trick described in [[https://d12frosted.io/posts/2021-01-16-task-management-with-roam-vol5.html][Dynamic and fast agenda]].
+Agenda builds fast thanks to trick described in [[d12frosted:/posts/2021-01-16-task-management-with-roam-vol5][Dynamic and fast agenda]].
 
 * Dynamically selecting capture location
 :PROPERTIES:
@@ -104,7 +104,7 @@ Agenda builds fast thanks to trick described in [[https://d12frosted.io/posts/20
 
 At this point you might be wondering how it's related to Org Roam. After all, up to this moment we didn't use any Org Roam features. And what is the core feature of Org Roam? IMO, it's fast query capabilities - this is something we've been using in almost every post of series.
 
-It's hard to come up with generic example, and I hate examples from the void of someones imagination, so let me describe where exactly in the capturing process I use it (apart from [[https://d12frosted.io/posts/2020-07-07-task-management-with-roam-vol4.html][Automatic tagging]]). Hopefully, it's easy to adapt this idea for other use cases, and if you experience any troubles, don't hesitate to contact me.
+It's hard to come up with generic example, and I hate examples from the void of someones imagination, so let me describe where exactly in the capturing process I use it (apart from [[d12frosted:/posts/2020-07-07-task-management-with-roam-vol4][Automatic tagging]]). Hopefully, it's easy to adapt this idea for other use cases, and if you experience any troubles, don't hesitate to contact me.
 
 Meeting notes. Whenever I am on a meeting, I love to keep meeting notes (thanks to Org Mode my memory is ephemeral). I divide all meetings in two categories - one-on-ones (e.g. $p = 2$) and meetings with multiple participants (e.g. $p > 2$). And in the end, all meetings from one-on-ones are moved under =Meetings= outline in the file related to person I have a meeting with. And since it is so common I decided to save myself from unnecessary refile action by adapting my capture flow.
 
@@ -112,7 +112,7 @@ Meeting notes. Whenever I am on a meeting, I love to keep meeting notes (thanks 
 
 So when a have a meeting, I simply hit =M-m c m= (short for 'capture meeting' which calls =vulpea-capture-meeting=), select a person or type any other phrase (e.g. project name) and let the capture process to place my notes in the right location. If I select a person, meeting notes are going to be located under =Meetings= heading in the file dedicated to the selected person. If I type something else, my notes go straight the inbox.
 
-Person selection is possible by using =vulpea-select= from [[https://github.com/d12frosted/vulpea][vulpea]] library (the same as we did in [[https://d12frosted.io/posts/2021-01-24-task-management-with-roam-vol6.html][Select a person and view related tasks]]). In order for my meetings notes related to specific person to fall into my inbox, I tag them with =REFILE= tag directly (unlike notes in inbox file, which get tag via inheritance).
+Person selection is possible by using =vulpea-select= from [[https://github.com/d12frosted/vulpea][vulpea]] library (the same as we did in [[d12frosted:/posts/2021-01-24-task-management-with-roam-vol6][Select a person and view related tasks]]). In order for my meetings notes related to specific person to fall into my inbox, I tag them with =REFILE= tag directly (unlike notes in inbox file, which get tag via inheritance).
 
 The code is pretty straightforward and available on [[https://github.com/d12frosted/environment/blob/ec30dc1218c86578b4f655c717147cd70012a12e/emacs/lisp/lib-vulpea-capture.el][GitHub]]. First we setup a new template, which is responsible for capturing meeting notes. The cool part about capture process in Org Mode is that you can use functions to determine capture location and capture body, so this is what we are using here - =vulpea-capture-meeting-target= and =vulpea-capture-meeting-template=.
 
@@ -208,13 +208,13 @@ That's it!
 :ID:                     6a06edc5-1a15-4cc1-b504-ac82fc0934da
 :END:
 
-1. [[https://d12frosted.io/posts/2020-06-23-task-management-with-roam-vol1.html][Path to Roam]]
-2. [[https://d12frosted.io/posts/2020-06-24-task-management-with-roam-vol2.html][Categories]]
-3. [[https://d12frosted.io/posts/2020-06-25-task-management-with-roam-vol3.html][FILETAGS]]
-4. [[https://d12frosted.io/posts/2020-07-07-task-management-with-roam-vol4.html][Automatic tagging]]
-5. [[https://d12frosted.io/posts/2021-01-16-task-management-with-roam-vol5.html][Dynamic and fast agenda]]
-6. [[https://d12frosted.io/posts/2021-01-24-task-management-with-roam-vol6.html][Select a person and view related tasks]]
-7. [[https://d12frosted.io/posts/2021-05-21-task-management-with-roam-vol7.html][Capture]]
+1. [[d12frosted:/posts/2020-06-23-task-management-with-roam-vol1][Path to Roam]]
+2. [[d12frosted:/posts/2020-06-24-task-management-with-roam-vol2][Categories]]
+3. [[d12frosted:/posts/2020-06-25-task-management-with-roam-vol3][FILETAGS]]
+4. [[d12frosted:/posts/2020-07-07-task-management-with-roam-vol4][Automatic tagging]]
+5. [[d12frosted:/posts/2021-01-16-task-management-with-roam-vol5][Dynamic and fast agenda]]
+6. [[d12frosted:/posts/2021-01-24-task-management-with-roam-vol6][Select a person and view related tasks]]
+7. [[d12frosted:/posts/2021-05-21-task-management-with-roam-vol7][Capture]]
 
 * References
 :PROPERTIES:
