--- a/src/public/content/posts/2018-10-13-gifify.md
+++ b/src/public/content/posts/2018-10-13-gifify.md
@@ -1,6 +1,10 @@
-<img src="/images/2018-10-13-gifify/2022-07-19_20-24-38_gifify-lolcat-regular.gif" class="img-half img-float-left" />
+<div class="d12-images-block-[100%]">
 
-<img src="/images/2018-10-13-gifify/2022-07-19_20-24-38_gifify-lolcat-palette.gif" class="img-half img-float-right" />
+![](/images/2018-10-13-gifify/2022-07-19_20-24-38_gifify-lolcat-regular.gif)
+
+![](/images/2018-10-13-gifify/2022-07-19_20-24-38_gifify-lolcat-palette.gif)
+
+</div>
 
 When it comes to converting video to GIF, one usually gets a huge file and a questionable quality. Most of the guides suggest to use FFmpeg to do the conversion, but usually, they don't bother with the quality of the result. As it turns out, folks from FFmpeg made some huge steps in improving the GIF output.
 
@@ -8,7 +12,7 @@ When it comes to converting video to GIF, one usually gets a huge file and a que
 
 > As you probably know, GIF is limited to a palette of 256 colors. And by default, FFmpeg just uses a generic palette that tries to cover the whole color space in order to support the largest variety of content:
 
-![](/images/2018-10-13-gifify/2022-07-19-20-29-03-ffmpeg-default-palette.webp)
+<img src="/images/2018-10-13-gifify/2022-07-19-20-29-03-ffmpeg-default-palette.webp" class="d12-image-1/2" />
 
 The idea is to generate a custom palette and use it during conversion.
 
@@ -75,17 +79,29 @@ My concern usually is about quality, not about the physical size if the output. 
 
 Here are several examples, were the difference between default and custom palette is visible. In the first example, the difference is more obvious than in others, but still.
 
-<img src="/images/2018-10-13-gifify/2022-07-19_20-29-47_gifify-lolcat-regular.gif" class="img-half img-float-left" />
+<div class="d12-images-block-[100%]">
 
-<img src="/images/2018-10-13-gifify/2022-07-19_20-29-47_gifify-lolcat-palette.gif" class="img-half img-float-right" />
+![](/images/2018-10-13-gifify/2022-07-19_20-29-47_gifify-lolcat-regular.gif)
 
-<img src="/images/2018-10-13-gifify/2022-07-19_20-30-26_gifify-screen-regular.gif" class="img-half img-float-left" />
+![](/images/2018-10-13-gifify/2022-07-19_20-29-47_gifify-lolcat-palette.gif)
 
-<img src="/images/2018-10-13-gifify/2022-07-19_20-30-26_gifify-screen-palette.gif" class="img-half img-float-right" />
+</div>
 
-<img src="/images/2018-10-13-gifify/2022-07-19_20-30-51_gifify-monty-regular.gif" class="img-half img-float-left" />
+<div class="d12-images-block-[100%]">
 
-<img src="/images/2018-10-13-gifify/2022-07-19_20-30-51_gifify-monty-palette.gif" class="img-half img-float-right" />
+![](/images/2018-10-13-gifify/2022-07-19_20-30-26_gifify-screen-regular.gif)
+
+![](/images/2018-10-13-gifify/2022-07-19_20-30-26_gifify-screen-palette.gif)
+
+</div>
+
+<div class="d12-images-block-[100%]">
+
+![](/images/2018-10-13-gifify/2022-07-19_20-30-51_gifify-monty-regular.gif)
+
+![](/images/2018-10-13-gifify/2022-07-19_20-30-51_gifify-monty-palette.gif)
+
+</div>
 
 # Installation
 
