--- a/src/public/content/posts/2022-07-14-vulpea-0.3.md
+++ b/src/public/content/posts/2022-07-14-vulpea-0.3.md
@@ -1,4 +1,4 @@
-<img src="/images/2022-07-14-vulpea-0.3/2022-07-20-09-51-46-vulpea-logo.webp" class="img-half" />
+<img src="/images/2022-07-14-vulpea-0.3/2022-07-20-09-51-46-vulpea-logo.webp" class="d12-image-1/2" />
 
 The time has come to release a new version of [Vulpea](https://github.com/d12frosted/vulpea), a collection of note-taking functions based on Org and Org Roam. Almost a year has passed since the release of v0.2. Over this time, Vulpea got several major features that deserve a dedicated version. In truth, I wanted to release it almost half a year ago, but the war kicked in, and I had more important things to focus on.
 
